# hsu-example1-rust

./: 1.txt  BUILD_AND_RUN.md  Cargo.toml  README.md
api/proto/: echoservice.proto
bins/echo-direct-cli/: Cargo.toml
bins/echo-direct-cli/src/: main.rs
bins/echo-grpc-cli/: Cargo.toml
bins/echo-grpc-cli/src/: main.rs
bins/echo-grpc-srv/: Cargo.toml
bins/echo-grpc-srv/src/: main.rs
crates/: echo-api-grpc-handlers.rs.backup
crates/echo-api/: Cargo.toml
crates/echo-api-grpc/: Cargo.toml  build.rs
crates/echo-api-grpc/src/: direct_closure.rs  gateway.rs  gateway_ext.rs  gateways.rs  handler.rs  lib.rs  server.rs
crates/echo-api/src/: direct_closure.rs  gateways.rs  handlers.rs  lib.rs
crates/echo-client/: Cargo.toml
crates/echo-client/src/: lib.rs  module.rs  service_provider.rs  wiring.rs
crates/echo-contract/: Cargo.toml
crates/echo-contract/src/: lib.rs
crates/echo-domain/: Cargo.toml
crates/echo-domain/src/: lib.rs  module.rs  service.rs
crates/echo-server/: Cargo.toml
crates/echo-server/src/: lib.rs  module.rs  service.rs  service_provider.rs  wiring.rs
