[workspace]
members = [
    "crates/echo-contract",
    "crates/echo-api",
    "crates/echo-api-grpc",
    "crates/echo-server",
    "crates/echo-client",
    "bins/echo-direct-cli",
    "bins/echo-grpc-srv",
    "bins/echo-grpc-cli",
]

resolver = "2"

[workspace.dependencies]
# HSU core crates
hsu-common = { path = "../hsu-core/rust/crates/hsu-common" }
hsu-module-management = { path = "../hsu-core/rust/crates/hsu-module-management" }
hsu-module-proto = { path = "../hsu-core/rust/crates/hsu-module-proto" }
hsu-module-api = { path = "../hsu-core/rust/crates/hsu-module-api" }
hsu-service-registry = { path = "../hsu-core/rust/crates/hsu-service-registry" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# gRPC
tonic = "0.11"
prost = "0.12"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
