[package]
name = "echo-grpc-srv"
version = "0.1.0"
edition = "2021"
description = "Echo gRPC server with full HSU framework"

[[bin]]
name = "echo-grpc-srv"
path = "src/main.rs"

[dependencies]
echo-domain = { path = "../../crates/echo-domain" }
echo-api-grpc = { path = "../../crates/echo-api-grpc" }

hsu-common = { workspace = true }
hsu-module-management = { workspace = true }
hsu-module-api = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

