[package]
name = "echo-api-grpc"
version = "0.1.0"
edition = "2021"
description = "gRPC protocol adapters for Echo service"

[dependencies]
echo-contract = { path = "../echo-contract" }

hsu-common = { workspace = true }
hsu-module-management = { workspace = true }
hsu-module-api = { workspace = true }
hsu-module-proto = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
# Only for tests - adapter layer needs domain impl to test
echo-server = { path = "../echo-server" }

