[package]
name = "echo-domain"
version = "0.1.0"
edition = "2021"
description = "Echo service domain logic"

[dependencies]
hsu-common = { workspace = true }
hsu-module-management = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

