[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"
description = "Echo server module with wiring"

[dependencies]
# Local crates
echo-contract = { path = "../echo-contract" }
echo-api = { path = "../echo-api" }
echo-api-grpc = { path = "../echo-api-grpc" }

# HSU core
hsu-common = { workspace = true }
hsu-module-api = { workspace = true }
hsu-module-proto = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

